# thesis

baroclinic/baroclinic_wave/: 3441908  3469999  plot_main1.ncl  plot_main2.ncl  plot_main3.ncl  plot_mod.ncl  plot_perturbation.ncl
baroclinic/held_suarez/: calc_statistics_hs.ncl  plot_mod.ncl  plot_mod_old.ncl  plot_statistics_hs.ncl  plot_tm_te.py  readme.txt
baroclinic/held_suarez/GFDL/: calc_statistics_hs.ncl  plot_mod.ncl  plot_statistics_hs.ncl  readme.txt
baroclinic/mountain_wave/: README  plot_main1.ncl  plot_main2.ncl  plot_mod.ncl  plot_tm_te.py
baroclinic/pgf_test/: 3449555  3449695  3449801  plot_mountain_pgf_test.ncl  plot_pgf_test.ncl
baroclinic/real_case/: README  plot_main.ncl  plot_mod.ncl
baroclinic/real_case/case0p15/: plot_main.ncl
baroclinic/rossby_haurwitz/: 3437396  3437415  3441699  3476952  3479712  plot_main1.ncl  plot_main2.ncl  plot_mod.ncl  plot_tm_te.py  plot_z500_gmcore_gfdl.ncl
baroclinic/steady_state/: calc_errors.py  plot_ic_steady_state.ncl  plot_steady_state.ncl
baroclinic/steady_state/error/: CMakeLists.txt
baroclinic/steady_state/error/src/: calc_error.F90
swm/cross_polar/no_reduce/: 3418453  3418454  3418590  3425644  3425648  3427337  plot_huv_cross_pole.ncl  plot_polar_mod.ncl  plot_te_tpe.py  plot_u_cross_pole.ncl
swm/cross_polar/reduce/: 3434096  3434101  3434106  3434108  3434110  3434128  plot_tm_te_tpe_cross_pole_reduce.py  plot_u_cross_pole_reduce.ncl
swm/mountain_wave/no_reduce/: 3426794  3427223  3427470  3427472  3427495  3427729  3427730  3428985  3428986  plot_polar_mod.ncl  plot_te_tpe.py  plot_te_tpe_day50.py  plot_u_mountain_wave.ncl  plot_vor_mountain_wave.ncl
swm/mountain_wave/reduce/: 3433939  3433940  plot_mod.ncl  plot_mz.ncl  plot_tm_te_tpe.py  plot_u.ncl  plot_z_vor.ncl
swm/rossby_haurwitz/no_reduce/: 3369861
swm/rossby_haurwitz/reduce/: plot_hu_rh4_swm.ncl  plot_tm_te_pte.py  plot_tm_te_tpe.py  plot_vor_rh4_swm.ncl  plot_z_vor_div.ncl
swm/steady_state/no_reduce/: 3369828  3369840  3369843  3369845  3369848  calc_convergence.py  calc_errors.py
swm/steady_state/reduce/: .calc_convergence.py.swp  3431948  3431951  3433734  calc_convergence.py  calc_errors.py  (+2 more)
